--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "antd": "^4.17.1",
+    "axios": "^0.24.0",
+    "jwt-decode": "^3.1.2",
+    "node-fetch": "^3.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
